manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      name: application
      labels:
        app: application
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: application

      containers:
        - name: application
          image: hashicorp/http-echo
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
              cpu: 0.1m
            limits:
              memory: 150Mi
              cpu: 0.2m
